[package]
authors = ["bsamm"]
edition = "2018"
name = "sammons-vst"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = {git = "https://github.com/rustaudio/vst-rs"}

[lib]
crate-type = ["cdylib"]
name = "sammons_vst"
